# heat-sentinel

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  PROJECT_LOG.md  README.md
cmake/: avr-gcc-toolchain.cmake
src/: app_config.h.example  board.h  main.c
src/app/: scheduler.c  scheduler.h
src/drivers/: buzzer.c  buzzer.h  dht11.c  dht11.h  ds1307.c  ds1307.h  esp01.c  esp01.h  ldr.c  ldr.h  led.c  led.h  mcp3201.c  mcp3201.h  sh1106.c  sh1106.h  tmp35.c  tmp35.h
src/hal/: adc.c  adc.h  gpio.h  i2c.c  i2c.h  spi.c  spi.h  timer.c  timer.h  uart.c  uart.h
